Use specific env-file in spec, cleanup after

--- a/load-env.cabal
+++ b/load-env.cabal
@@ -26,6 +26,7 @@ Test-Suite spec
   Main-Is:              Spec.hs
   Build-Depends:        base
                       , load-env
+                      , directory
                       , hspec
                       , HUnit
                       , parsec
