--- a/load-env.cabal
+++ b/load-env.cabal
@@ -13,8 +13,8 @@ Library
   Default-Language:     Haskell2010
   HS-Source-Dirs:       src
   GHC-Options:          -Wall -Werror
-  Exposed-Modules:      System.Env.Load
-                      , System.Env.Parse
+  Exposed-Modules:      System.Environment.Load
+                      , System.Environment.Parse
   Build-Depends:        base >= 4.6.0 && < 5
                       , parsec
 
