Rename module to be unique
According to some folks in #haskell and this[1], packages should have a unique
top-level namespace, derived from the project name, with all code contained
thereunder.

1: http://www.reddit.com/r/haskell/comments/1qrilm/packages_and_namespaces_naming_convention/

--- a/load-env.cabal
+++ b/load-env.cabal
@@ -17,8 +17,8 @@ Library
   Default-Language:     Haskell2010
   HS-Source-Dirs:       src
   GHC-Options:          -Wall -Werror
-  Exposed-Modules:      System.Environment.Load
-                      , System.Environment.Parse
+  Exposed-Modules:      LoadEnv
+                      , LoadEnv.Parse
   Build-Depends:        base >= 4.6.0 && < 5
                       , parsec
 
