--- a/load-env.cabal
+++ b/load-env.cabal
@@ -16,7 +16,7 @@ Build-Type:             Simple
 Library
   Default-Language:     Haskell2010
   HS-Source-Dirs:       src
-  GHC-Options:          -Wall -Werror
+  GHC-Options:          -Wall
   Exposed-Modules:      LoadEnv
                       , LoadEnv.Parse
   Build-Depends:        base >= 4.6.0 && < 5
@@ -26,7 +26,7 @@ Test-Suite spec
   Type:                 exitcode-stdio-1.0
   Default-Language:     Haskell2010
   Hs-Source-Dirs:       test
-  Ghc-Options:          -Wall -Werror
+  Ghc-Options:          -Wall
   Main-Is:              Spec.hs
   Build-Depends:        base
                       , load-env
