--- a/load-env.cabal
+++ b/load-env.cabal
@@ -1,41 +1,42 @@
-Name:                   load-env
-Version:                0.1.0
-Author:                 Pat Brisbin <pbrisbin@gmail.com>
-Maintainer:             Pat Brisbin <pbrisbin@gmail.com>
-License:                BSD3
-License-File:           LICENSE
-Synopsis:               Load environment variables from a file.
-Description:            Parse a .env file and load any declared variables into
+name:                   load-env
+version:                0.1.0
+author:                 Pat Brisbin <pbrisbin@gmail.com>
+maintainer:             Pat Brisbin <pbrisbin@gmail.com>
+license:                BSD3
+license-file:           LICENSE
+synopsis:               Load environment variables from a file.
+category:               Configuration
+description:            Parse a .env file and load any declared variables into
                         the current process's environment. This allows for a
                         .env file to specify development-friendly defaults for
                         configuration values normally set in the deployment
                         environment.
-Cabal-Version:          >= 1.10
-Build-Type:             Simple
+cabal-version:          >= 1.10
+build-type:             Simple
 
-Library
-  Default-Language:     Haskell2010
-  HS-Source-Dirs:       src
-  GHC-Options:          -Wall
-  Exposed-Modules:      LoadEnv
+library
+  default-language:     Haskell2010
+  hs-source-dirs:       src
+  ghc-options:          -Wall
+  exposed-modules:      LoadEnv
                       , LoadEnv.Parse
-  Build-Depends:        base >= 4.7.0 && < 5
+  build-depends:        base >= 4.7.0 && < 5
                       , directory
                       , parsec
 
-Test-Suite spec
-  Type:                 exitcode-stdio-1.0
-  Default-Language:     Haskell2010
-  Hs-Source-Dirs:       test
-  Ghc-Options:          -Wall
-  Main-Is:              Spec.hs
-  Build-Depends:        base
+test-suite spec
+  type:                 exitcode-stdio-1.0
+  default-language:     Haskell2010
+  hs-source-dirs:       test
+  ghc-options:          -Wall
+  main-is:              Spec.hs
+  build-depends:        base
                       , load-env
                       , directory
                       , hspec
                       , HUnit
                       , parsec
 
-Source-Repository head
-  Type:                 git
-  Location:             https://github.com/pbrisbin/load-env
+source-repository head
+  type:                 git
+  location:             https://github.com/pbrisbin/load-env
