--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,15 @@ jobs:
       - image: fpco/stack-build:lts-11.0
     steps:
       - checkout
+      - run:
+          name: Digest
+          command: |
+            git ls-files | xargs md5sum > digest
       - restore_cache:
           keys:
-            - stack-{{ .Branch }}-{{ checksum "stack.yaml" }}
-            - stack-{{ .Branch }}
-            - stack-
+            - v1-{{ .Branch }}-{{ checksum "digest" }}
+            - v1-{{ .Branch }}-
+            - v1-master-
       - run:
           name: Dependencies
           command: make setup
@@ -19,7 +23,7 @@ jobs:
           name: Build
           command: make build
       - save_cache:
-          key: stack-{{ .Branch }}-{{ checksum "stack.yaml" }}
+          key: v1-{{ .Branch }}-{{ checksum "digest" }}
           paths:
             - ~/.stack
             - ./.stack-work
